0029559: Samples - wrong copyright statement in FuncDemo

Update FuncDemo sample according to new elasticnodes example in Qt.